Add lexis jwt authentification
